# SoftClusterEX

./: .gitignore  HISTORY.md  LICENSE  README.md  install.mel
SoftClusterEX/: __init__.py  install.mel
SoftClusterEX/core/: scData.py  scUtil.py
SoftClusterEX/modules/: SoftClusterEX.mod
SoftClusterEX/plug-ins/: softSelectionQuery_2012-x64.mll  softSelectionQuery_2012.bundle  softSelectionQuery_2015-x64.mll  softSelectionQuery_2015.bundle  softSelectionQuery_2016-x64.mll  softSelectionQuery_2016.bundle
SoftClusterEX/startup/: setup.py
SoftClusterEX/ui/: mainWindow.py  tabAbout.py  tabCreate.py  tabMirror.py  tabWeight.py
plug-ins/: softSelectionQuery_2011-x64.mll  softSelectionQuery_2011.bundle  softSelectionQuery_2013-x64.mll  softSelectionQuery_2013.bundle  softSelectionQuery_2014-x64.mll  softSelectionQuery_2014.bundle
softSelectionQueryCmd/: CMakeLists.txt  buildAll.bat  buildAll.sh
softSelectionQueryCmd/modules/: FindMaya.cmake
softSelectionQueryCmd/src/: CMakeLists.txt  pluginMain.cpp  softSelectionQueryCmd.cpp  softSelectionQueryCmd.h  version.h  version.h.in
ui/: __init__.py  baseTab.py  mainWindow.py  tabWeight.py
